deploy: 3877cbc004086443af852411e2b2781f9991ac81

--- a/AGOID.29372/manifest.json
+++ b/AGOID.29372/manifest.json
@@ -8,7 +8,9 @@
         ]
     },
     "summary": {
-        "en": []
+        "en": [
+            "The UV image shows that the miniature is in a good state of conservation. The pale orange UV fluorescence colour (for instance evident on the ruff) is due to the presence of lead white.\n \nThe playing card was not accessible for the analysis, but the MA-XRF mercury (Hg) map shows the presence of one heart, made of vermilion."
+        ]
     },
     "requiredStatement": {
         "label": {
